--- a/.github/workflows/virus-scan.yml
+++ b/.github/workflows/virus-scan.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Flatten directory structure
         run: |
           mkdir -p scan-files
-          find packages -type f \( -name "*.zip" -o -name "*.tar.xz" \) -exec cp {} scan-files/ \;
+          find packages -type f \( -name "*.zip" -o -name "*.tar.xz" -o -name "gotune-*" \) -exec cp {} scan-files/ \;
           echo "Files to scan:"
           ls -la scan-files/
 
@@ -45,6 +45,7 @@ jobs:
           files: |
             scan-files/*.zip
             scan-files/*.tar.xz
+            scan-files/gotune-*
 
       - name: Format scan results
         id: format
@@ -53,21 +54,23 @@ jobs:
           echo "${{ steps.virustotal.outputs.analysis }}"
 
           # Parse the analysis output and create markdown table
-          TABLE="| Package | VirusTotal Analysis |
-          |---------|---------------------|"
+          TABLE="| File | VirusTotal Analysis |
+          |------|---------------------|"
 
-          # The analysis output format is: file=analysisURL
+          # Convert comma-separated to newline-separated, then parse
+          # Use process substitution to avoid subshell issue with pipe
           while IFS= read -r line; do
             if [ -n "$line" ]; then
-              # Extract filename and URL
-              FILE=$(echo "$line" | cut -d'=' -f1 | xargs basename)
-              URL=$(echo "$line" | cut -d'=' -f2-)
+              # Extract filename (first part before =)
+              FILE=$(echo "$line" | sed 's/=.*//' | xargs basename)
+              # Extract URL (everything after first =)
+              URL=$(echo "$line" | sed 's/^[^=]*=//')
               if [ -n "$FILE" ] && [ -n "$URL" ]; then
                 TABLE="$TABLE
           | $FILE | [View Analysis]($URL) |"
               fi
             fi
-          done <<< "${{ steps.virustotal.outputs.analysis }}"
+          done < <(echo "${{ steps.virustotal.outputs.analysis }}" | tr ',' '\n')
 
           # Output as multiline string
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
