--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ on:
         type: string
         default: ''
 
+permissions:
+  contents: read
+
 env:
   GO_VERSION: '1.25'
   MODULE: github.com/tejashwikalptaru/gotune
